about done and home started

--- a/src/home/Home.css
+++ b/src/home/Home.css
@@ -1,176 +1,17 @@
-:root {
-  --background: url("../img/TEDCBlackLogo.png");
+#new-info-slide {
+  background-color: whitesmoke;
 }
 
-.main-panel-home-background {
-  background-image: var(--background);
-  height: 90vh;
-  width: 100%;
-  opacity: 80;
-  background-size: contain;
-  background-position: center top;
-  background-repeat: no-repeat;
-  display: flex;
-  margin: auto;
-  background-color: white;
+#new-info-slide h1 {
+  font-size: 48px;
 }
 
-.home-event-details {
-  margin-bottom: 7%;
+#new-info-slide span {
+  color: red;
   font-weight: bold;
 }
 
-.home-title {
-  height: 90%;
-  justify-content: flex-end;
-}
-
-.main-panel-home-content {
-  display: flex;
-  height: 100%;
-  width: 100%;
-  flex-direction: column;
-}
-
-.main-panel-home-content > * {
-  display: flex;
-  flex-direction: column;
-  margin: auto;
-  padding-top: 10%;
-}
-
-.first-panel {
-  width: 100%;
-}
-
-.about-home-panel-title {
-  font-size: 2.2em;
-  margin-bottom: 20px;
-  font-weight: 250;
-}
-
-.about-home-panel-desc {
-  font-size: 1.5em;
-}
-
-.offset-for-bg {
-  margin-bottom: 10%;
-  justify-self: end;
-}
-
-.section-title {
-  padding: 20px 100px;
-}
-
-.cool-btn {
-  border: solid thin #e62b1e;
-}
-
-.section-title-container {
-  width: 100%;
-  display: flex;
-  margin: auto;
-  padding: 100px;
-}
-
-h1 {
-  margin: auto;
-}
-
-.home-content {
-  background-size: cover;
-}
-
-.the-x {
-  /* color: #e62b1e; */
-}
-
-.grid {
-  padding: 100px 10% 0px 10%;
-  width: 100%;
-  background-image: url("../img/logo2.png");
-}
-
-.fa-angle-down {
-  position: absolute;
-  bottom: 50px;
-}
-
-.bottom-aligned-button-container {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  justify-content: flex-end;
-  align-items: center;
-  padding: 2em;
-}
-
-.paper-div {
-  padding: 10px 20px 20px 30px;
-  border-left: solid var(--ted-red) thin;
-}
-
-.row-spacer {
-  height: 120px;
-  background-color: inherit;
-}
-
-.profile-panel-container {
-  margin: 0% 8% 8% 8%;
-}
-
-#about-home-panel {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  margin: 100px 10%;
-  padding: 40px 40px;
-  text-align: left;
-  background-color: var(--primary);
-  border-left: solid var(--ted-red) thin;
-}
-
-#about-home-panel p {
-  font-size: 1.5em;
-  margin: 10px;
-}
-
-.p-sm {
-  font-size: 1em !important;
-  opacity: 0.5;
-}
-
-/* sm --- Small devices (landscape phones, 576px and up) */
-@media (min-width: 576px) {
-}
-
-/* md --- Medium devices (tablets, 768px and up) */
-@media (min-width: 768px) {
-  .grid {
-    padding: 100px 15% 0px 15%;
-    width: 100%;
-  }
-  .main-panel-home-background {
-    background-image: var(--background);
-    
-    width: 40%;
-    background-size: cover;
-    background-position: top;
-    display: flex;
-    margin: auto;
-    background-color: transparent;
-    opacity: 1;
-
-  }
-  .home-title {
-    padding-bottom: 0em;
-  }
-}
-
-/* lg --- Large devices (desktops, 992px and up) */
-@media (min-width: 992px) {
-}
-
-/* xl --- Extra large devices (large desktops, 1200px and up) */
-@media (min-width: 1200px) {
+#new-info-slide h3 {
+  font-size: 24px;
+  line-height: 1.5em;
 }
