--- a/src/home/Home.css
+++ b/src/home/Home.css
@@ -30,3 +30,10 @@ font-style: normal;
 font-weight: normal;
   font-size: 36px;
 }
+
+@media (max-width: 1200px) {
+  .container {
+    width: 80%;
+  }
+
+}
