--- a/src/events/Events.css
+++ b/src/events/Events.css
@@ -13,6 +13,11 @@
   border-radius: 20%; */
 }
 
+.info {
+  display: none !important;
+  color: blue;
+}
+
 .countdown {
   color: seashell
 }
@@ -33,9 +38,36 @@
 
 #event-name {
   font-family: "Monoton";
+}
+
+#past-section {
+  background-color: #353839;
+  color: white;
+  
+}
+
+#past-section .container {
+  width: 90%;
+}
+
+#past-section h1 {
+  font-family: 'Helvetica';
+}
+
+#past-section .card {
+  background-color: transparent;
+  border: none;
+}
+
+#past-section .card-body {
+  border-left: 1px solid black;
+  border-bottom: 1px solid black;
 
 }
 
+.event-date {
+  font-size: 14px;
+}
 
 
 
