--- a/src/events/Events.css
+++ b/src/events/Events.css
@@ -27,6 +27,10 @@
 .countdown h4 {
   font-size: 30px;
 }
+.countdown .btn {
+  border: 1px solid maroon;
+  width: 10em;
+}
 
 .event-info {
   background-color: linen;
