added ability to see old events

--- a/src/apply/Apply.css
+++ b/src/apply/Apply.css
@@ -20,6 +20,9 @@
 
 .apply-card {
   border-radius: 15% !important;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: normal;
 }
 
 .apply-card p {
