--- a/src/events/Events.css
+++ b/src/events/Events.css
@@ -1,6 +1,5 @@
-.main-panel-events {
-  /* background-image: url("../img/backgroundImg.png"); */
-  /* background-size: cover; */
+#body {
+  display: none;
 }
 
 .speech-info {
