--- a/src/home/Home.css
+++ b/src/home/Home.css
@@ -1,27 +1,75 @@
-#new-info-slide {
-  background-color: whitesmoke;
+#body {
+  display: none;
 }
 
-#new-info-slide h1 {
-  font-size: 48px;
+.speech-info {
+  font-size: 14px;
 }
 
-#new-info-slide span {
-  color: red;
-  font-weight: bold;
+#year {
+  font-size: 60px;
+  /* background-color: #ff2a05;
+  border-radius: 20%; */
 }
 
-#new-info-slide h3 {
-  font-size: 24px;
-  line-height: 1.5em;
+.info {
+  display: none !important;
+  color: blue;
 }
 
-#speakers-slide {
-  background-color: white;
+.countdown {
+  color: seashell
+}
+.countdown h1 {
+  font-size: 60px;
+}
+.countdown h4 {
+  font-size: 30px;
+}
+.countdown .btn {
+  border: 1px solid maroon;
+  width: 10em;
 }
 
-#speakers-slide h1 { 
-  padding-top: 3em;
+.event-info {
+  background-color: linen;
+}
+
+.event-info h1 {
+  font-size: 50px;
+}
+
+#event-name {
+  font-family: "Monoton";
+}
+
+#past-section {
+  background-color: #353839;
+  color: white;
+  
+}
+
+#past-section .container {
+  width: 90%;
+}
+
+#past-section h1 {
+  font-family: 'Helvetica';
+}
+
+#past-section .card {
+  background-color: transparent;
+  border: none;
+}
+
+#past-section .card-body {
+  border-left: 1px solid black;
+  border-bottom: 1px solid black;
+
+}
+
+.event-date {
+  font-size: 14px;
 }
 
 #join-us-slide h1{
@@ -31,9 +79,29 @@
   font-size: 36px;
 }
 
-@media (max-width: 1200px) {
-  .container {
-    width: 80%;
-  }
 
+
+/* sm --- Small devices (landscape phones, 576px and up) */
+@media (max-width: 900px) {
+  #overlay {
+    transform: 0;
+  }
+}
+
+@media (min-width: 900px) {
+  #overlay {
+  transform: translateY(-50%);
+}
+}
+
+/* md --- Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+}
+
+/* lg --- Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+}
+
+/* xl --- Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
 }
