--- a/src/home/Home.css
+++ b/src/home/Home.css
@@ -79,6 +79,10 @@
   font-size: 36px;
 }
 
+#header-img {
+  padding-top: 5em;
+  padding-bottom: 5em;
+}
 
 
 /* sm --- Small devices (landscape phones, 576px and up) */
