--- a/src/home/Home.css
+++ b/src/home/Home.css
@@ -1,3 +1,4 @@
+
 #body {
   /* display: none; */
   background-color: DimGray;
@@ -103,6 +104,13 @@
   #overlay {
   transform: translateY(-50%);
 }
+  .speaker-card {
+    max-width: 90%;
+  }
+  .speaker-img {
+    height: 100% !important;
+  }
+
 }
 
 /* md --- Medium devices (tablets, 768px and up) */
